<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="txtCalculate">Calculate Tip</string>
    <string name="txtTitle">Please enter Amount and Tip Percentage:</string>
    <string name="titleTip">Tip:</string>
    <string name="titleAmount">Amount:</string>
    <string name="titleTotal">Total:</string>
    <string name="initialvalue">$0.00</string>
    <string name="initialPercentage">0%</string>
</resources>
